--- a/0x01-react_intro/task_2/dashboard/src/App.css
+++ b/0x01-react_intro/task_2/dashboard/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  position: relative;
+  min-width: 90%;
 }
 
 .App-logo {
@@ -12,7 +14,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-img{
+.App-header img{
   height: 15%;
   width: 15%;
 }
@@ -23,6 +25,7 @@ h1{
 }
 
 .App-header {
+  padding-top: 15%;
   background-color: #fff;
   /* min-height: 100vh; */
   display: flex;
