--- a/0x01-react_intro/task_2/dashboard/src/Notifications.css
+++ b/0x01-react_intro/task_2/dashboard/src/Notifications.css
@@ -1,4 +1,18 @@
 .Notifications{
-    border: 3px solid red;
+    border: 3px dashed red;
     padding: 2%;
+    position: absolute;
+    top: 1%;
+    width: 100%;
+    height: 15%;
+}
+.Notifications p{
+    font-size: 20px;
+    font-weight: bold;
+}
+li[data-priority="default"] {
+    color: blue;
+}
+li[data-priority="urgent"] {
+    color: red;
 }
